<resources>
    <string name="app_name">ContactApp using SQLite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="saqlash">Saqlash</string>
    <string name="number">Number</string>
    <string name="name">Name</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="submit">Submit</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
</resources>